# sticker-nester-claude

./: .dockerignore  .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  CPP_POLYGON_PACKING_IMPLEMENTATION.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  OPTIMIZATION_GUIDE.md  POLYGON-PACKING.md  QUICKSTART-DEPLOYMENT.md  README.md  SMART_PACKING_MODES.md  VALIDATION.md  VERIFICATION_REPORT.md  VERSION_BADGE.md  angular.json  docker-build.sh  docker-compose.homeserver.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  test-nfp-api.js  test-nfp-direct.js  test-optimizer-comparison.js  test-polygon-packing.js  test-polygon-packing.py  test-polygon-packing.sh  validate.sh
.backup/: pdf.service.ts  worker.service.ts
.github/workflows/: docker-build-deploy.yml  validate.yml
e2e/: .gitignore  README.md  polygon-packing.e2e.ts  run-e2e-tests.sh  test-fixed-pages.ts  test-multisheet-packing.ts  test-pack-all-items.ts  test-polygon-packing-api.ts  test-rotation-strategies.ts
e2e/api-test-results/: test-results.json
e2e/screenshots/: POLYGON_PACKING_FAQ.md  README.md
e2e/screenshots/multi-sheet/: README.md  test-results.json
e2e/screenshots/rotation-comparison/: rotation-comparison.json
scripts/: package-lock.json  package.json  tsconfig.json  verification-results.txt  verify-backend.ts  verify-layout.ts
server/: .gitignore  Dockerfile  ROTATION_PERFORMANCE_ANALYSIS.md  TEST_RESULTS.md  jest.config.js  package-lock.json  package.json  tsconfig.json
server/cpp-packer/: CMakeLists.txt  README.md  build.sh
server/cpp-packer/src/: main-stub.cpp  main.cpp
server/docs/: OPTION_2_NAPI_IMPLEMENTATION.md
server/src/: index.ts
server/src/__tests__/: api.integration.test.ts  cpp-packer.benchmark.ts  generate_test_images.py  geometry.service.test.ts  image.service.test.ts  nesting.service.test.ts  petalerlogo-collision.test.ts  polygon-packing.test.ts  random-shapes.integration.test.ts  rotation-performance.test.ts
server/src/__tests__/helpers/: shape-generator.helper.ts
server/src/config/: multer.ts
server/src/routes/: nesting.routes.ts  pdf.routes.ts
server/src/services/: cpp-packer.service.ts  genetic-algorithm.service.ts  geometry.service.ts  image.service.ts  nesting.service.ts  nfp-nesting.service.ts  pdf.service.ts  polygon-nesting.service.ts  polygon-packing-v2.service.ts  polygon-packing.service.ts  rotation-config.service.ts  simulated-annealing.service.ts  worker-manager.service.ts
server/src/types/: clipper-lib.d.ts  imagetracerjs.d.ts  simplify-js.d.ts
server/src/workers/: packing.worker.ts
src/: index.html  styles.scss
src/app/: app.html  app.scss  app.spec.ts  app.ts
src/app/components/: canvas-preview.component.ts  control-panel.component.ts  progress-bar.component.ts  upload-dropzone.component.ts  version-badge.component.ts
src/app/models/: geometry.types.ts  index.ts  nesting.interface.ts  sheet-size.interface.ts  sticker.interface.ts
src/app/services/: api.service.ts  geometry.service.spec.ts  geometry.service.ts  image-analysis.service.spec.ts  image-analysis.service.ts  index.ts  unit-conversion.service.spec.ts  unit-conversion.service.ts
src/app/workers/: nesting.worker.ts
